styling, image, and a few copy updates

--- a/projects/monsterproject.html
+++ b/projects/monsterproject.html
@@ -62,11 +62,11 @@
                     <div
                         class="row py-3 py-md-5 mb-3 d-flex justify-content-center align-items-center monster-image-container">
                         <div class="col-10 col-md-5 d-flex flex-column">
-                            <img class="col-12 monster-image"
+                            <img class="col-12 image-shadow"
                                 src="/images/project-images/monsterproject/MID-Addie-Abowd1.png">
                         </div>
                         <div class="col-10 col-md-6 d-flex flex-column">
-                            <img class="col-12 monster-image"
+                            <img class="col-12 image-shadow"
                                 src="/images/project-images/monsterproject/MID-Addie-Abowd2.png">
                         </div>
                     </div>
@@ -104,121 +104,121 @@
                     <div
                         class="row py-3 py-md-5 mb-3 d-flex justify-content-center align-items-center monster-image-container">
                         <div class="col-10 col-md-5 d-flex flex-column">
-                            <img class="col-12 monster-image"
+                            <img class="col-12 image-shadow"
                                 src="/images/project-images/monsterproject/ABO-Max-Abowd1.png">
                         </div>
                         <div class="col-10 col-md-5 d-flex flex-column">
-                            <img class="col-12 monster-image"
+                            <img class="col-12 image-shadow"
                                 src="/images/project-images/monsterproject/ABO-Max-Abowd2.png">
                         </div>
                     </div>
                     <div
                         class="row py-3 py-md-5 mb-3 d-flex justify-content-center align-items-center monster-image-container">
                         <div class="col-10 col-md-5 d-flex flex-column">
-                            <img class="col-12 monster-image"
+                            <img class="col-12 image-shadow"
                                 src="/images/project-images/monsterproject/MAR-Gabriele-Abowd1.png">
                         </div>
                         <div class="col-10 col-md-5 d-flex flex-column">
-                            <img class="col-12 monster-image"
+                            <img class="col-12 image-shadow"
                                 src="/images/project-images/monsterproject/MAR-Gabriele-Abowd2.png">
                         </div>
                     </div>
                     <div
                         class="row py-3 py-md-5 mb-3 d-flex justify-content-center align-items-center monster-image-container">
                         <div class="col-10 col-md-5 d-flex flex-column">
-                            <img class="col-12 monster-image"
+                            <img class="col-12 image-shadow"
                                 src="/images/project-images/monsterproject/TOR-Lillian-Abowd1.png">
                         </div>
                         <div class="col-10 col-md-5 d-flex flex-column">
-                            <img class="col-12 monster-image"
+                            <img class="col-12 image-shadow"
                                 src="/images/project-images/monsterproject/TOR-Lillian-Abowd2.png">
                         </div>
                     </div>
                     <div
                         class="row py-3 py-md-5 mb-3 d-flex justify-content-center align-items-center monster-image-container">
                         <div class="col-10 col-md-5 d-flex flex-column">
-                            <img class="col-12 monster-image"
+                            <img class="col-12 image-shadow"
                                 src="/images/project-images/monsterproject/WRI-Jack-Abowd1.png">
                         </div>
                         <div class="col-10 col-md-5 d-flex flex-column">
-                            <img class="col-12 monster-image"
+                            <img class="col-12 image-shadow"
                                 src="/images/project-images/monsterproject/WRI-Jack-Abowd2.png">
                         </div>
                     </div>
                     <div
                         class="row py-3 py-md-5 mb-3 d-flex justify-content-center align-items-center monster-image-container">
                         <div class="col-10 col-md-5 d-flex flex-column">
-                            <img class="col-12 monster-image"
+                            <img class="col-12 image-shadow"
                                 src="/images/project-images/monsterproject/ABO-Zoe-Abowd1.png">
                         </div>
                         <div class="col-10 col-md-5 d-flex flex-column">
-                            <img class="col-12 monster-image"
+                            <img class="col-12 image-shadow"
                                 src="/images/project-images/monsterproject/ABO-Zoe-Abowd2.png">
                         </div>
                     </div>
                     <div
                         class="row py-3 py-md-5 mb-3 d-flex justify-content-center align-items-center monster-image-container">
                         <div class="col-10 col-md-5 d-flex flex-column">
-                            <img class="col-12 monster-image"
+                            <img class="col-12 image-shadow"
                                 src="/images/project-images/monsterproject/DEL-Liliana-Abowd1.png">
                         </div>
                         <div class="col-10 col-md-5 d-flex flex-column">
-                            <img class="col-12 monster-image"
+                            <img class="col-12 image-shadow"
                                 src="/images/project-images/monsterproject/DEL-Liliana-Abowd2.png">
                         </div>
                     </div>
                     <div
                         class="row py-3 py-md-5 mb-3 d-flex justify-content-center align-items-center monster-image-container">
                         <div class="col-10 col-md-5 d-flex flex-column">
-                            <img class="col-12 monster-image"
+                            <img class="col-12 image-shadow"
                                 src="/images/project-images/monsterproject/ABO-Sydney-Abowd1.png">
                         </div>
                         <div class="col-10 col-md-5 d-flex flex-column">
-                            <img class="col-12 monster-image"
+                            <img class="col-12 image-shadow"
                                 src="/images/project-images/monsterproject/ABO-Sydney-Abowd2.png">
                         </div>
                     </div>
                     <div
                         class="row py-3 py-md-5 mb-3 d-flex justify-content-center align-items-center monster-image-container">
                         <div class="col-10 col-md-5 d-flex flex-column">
-                            <img class="col-12 monster-image"
+                            <img class="col-12 image-shadow"
                                 src="/images/project-images/monsterproject/ABO-Jude-Abowd1.png">
                         </div>
                         <div class="col-10 col-md-6 d-flex flex-column">
-                            <img class="col-12 monster-image"
+                            <img class="col-12 image-shadow"
                                 src="/images/project-images/monsterproject/ABO-Jude-Abowd2.png">
                         </div>
                     </div>
                     <div
                         class="row py-3 py-md-5 mb-3 d-flex justify-content-center align-items-center monster-image-container">
                         <div class="col-10 col-md-5 d-flex flex-column">
-                            <img class="col-12 monster-image"
+                            <img class="col-12 image-shadow"
                                 src="/images/project-images/monsterproject/FAR-Owen-Abowd1.png">
                         </div>
                         <div class="col-10 col-md-5 d-flex flex-column">
-                            <img class="col-12 monster-image"
+                            <img class="col-12 image-shadow"
                                 src="/images/project-images/monsterproject/FAR-Owen-Abowd2.png">
                         </div>
                     </div>
                     <div
                         class="row py-3 py-md-5 mb-3 d-flex justify-content-center align-items-center monster-image-container">
                         <div class="col-10 col-md-5 d-flex flex-column">
-                            <img class="col-12 monster-image"
+                            <img class="col-12 image-shadow"
                                 src="/images/project-images/monsterproject/MAR-Joaquin-Abowd1.png">
                         </div>
                         <div class="col-10 col-md-5 d-flex flex-column">
-                            <img class="col-12 monster-image"
+                            <img class="col-12 image-shadow"
                                 src="/images/project-images/monsterproject/MAR-Joaquin-Abowd2.png">
                         </div>
                     </div>
                     <div
                         class="row py-3 py-md-5 mb-3 d-flex justify-content-center align-items-center monster-image-container">
                         <div class="col-10 col-md-5 d-flex flex-column">
-                            <img class="col-12 monster-image"
+                            <img class="col-12 image-shadow"
                                 src="/images/project-images/monsterproject/MAR-Nicanor-Abowd1.png">
                         </div>
                         <div class="col-10 col-md-5 d-flex flex-column">
-                            <img class="col-12 monster-image"
+                            <img class="col-12 image-shadow"
                                 src="/images/project-images/monsterproject/MAR-Nicanor-Abowd2.png">
                         </div>
                     </div>
