--- a/projects/visualdesign.html
+++ b/projects/visualdesign.html
@@ -40,33 +40,37 @@
             <div class="modal-body w-100 d-flex justify-content-center">
                 <div class="container-fluid">
                     <div class="row py-5 px-5 mb-3 d-flex justify-content-center visual-design-image-container">
-                        <h2 class="mb-4 col-12 text-center project-title">Platform Launch Posters</h2>
-                        <p class="col-12 text-center mt-0 mb-5">
+                        <h2 class="mb-3 col-12 text-center project-title">Platform Launch Posters</h2>
+                        <p class="col-12 text-center mt-0 mb-4">
                             Concepted and designed a series of posters advertising the launch of the Enterprise Account
-                            Servicing Experience at the Capital One corporate headquarters. The theme was intended to
+                            Servicing Experience at the Capital One corporate offices across the US. The theme was
+                            intended to
                             follow a
-                            larger tech "transformation" initiative happening across the company.
+                            larger tech "transformation" initiative happening within the company.
                         </p>
-                        <div class="col-12 col-lg-6 px-0 mb-3 d-flex justify-content-center">
-                            <div class="col-6 d-flex flex-column">
-                                <img class="col-12 px-2" src="/images/project-images/visualdesign/EASE-mobile.png">
+                        <div class="col-12 col-lg-6 px-1 mb-2 d-flex justify-content-center align-items-center">
+                            <div class="col-6 d-flex flex-column px-1 px-lg-3">
+                                <img class="col-12 image-shadow"
+                                    src="/images/project-images/visualdesign/EASE-wearable.png">
                             </div>
-                            <div class="col-6 d-flex flex-column">
-                                <img class="col-12 px-2" src="/images/project-images/visualdesign/EASE-tablet.png">
+                            <div class="col-6 d-flex flex-column px-1">
+                                <img class="col-12 image-shadow"
+                                    src="/images/project-images/visualdesign/EASE-mobile.png">
                             </div>
                         </div>
-                        <div class="col-12 col-lg-6 px-0 d-flex justify-content-center">
-                            <div class="col-6 d-flex flex-column">
-                                <img class="col-12 px-2" src="/images/project-images/visualdesign/EASE-wearable.png">
+                        <div class="col-12 col-lg-6 px-1 mb-2 d-flex justify-content-center align-items-center">
+                            <div class="col-6 d-flex flex-column px-1">
+                                <img class="col-12 image-shadow"
+                                    src="/images/project-images/visualdesign/EASE-tablet.png">
                             </div>
-                            <div class="col-6 d-flex flex-column">
-                                <img class="col-12 px-2" src="/images/project-images/visualdesign/EASE-web.png">
+                            <div class="col-6 d-flex flex-column px-1 px-lg-3">
+                                <img class="col-12 image-shadow" src="/images/project-images/visualdesign/EASE-web.png">
                             </div>
                         </div>
                     </div>
                     <div class="row py-5 mb-3 d-flex justify-content-center visual-design-image-container">
-                        <h2 class="mb-4 col-12 text-center project-title">Design Rumble Logo</h2>
-                        <p class="col-12 text-center mt-0 mb-5">
+                        <h2 class="mb-3 col-12 text-center project-title">Design Rumble Logo</h2>
+                        <p class="col-12 text-center mt-0 mb-3">
                             Concepted and designed a logo for a monthly design offsite event focused on skill building
                             and
                             creative competition.
@@ -89,8 +93,8 @@
                         </div>
                     </div>
                     <div class="row py-5 mb-3 d-flex justify-content-center visual-design-image-container">
-                        <h2 class="mb-4 col-12 text-center project-title">C3 Summit Event Design</h2>
-                        <p class="col-12 text-center mt-0 mb-5">
+                        <h2 class="mb-3 col-12 text-center project-title">C3 Summit Event Design</h2>
+                        <p class="col-12 text-center mt-0 mb-3">
                             Concepted and created event branding for the annual Capital One Collaborative Code Community
                             front-end developer summit.
                         </p>
@@ -150,15 +154,20 @@
 
                     </div>
                     <div class="row py-5 px-5 mb-3 d-flex justify-content-center visual-design-image-container">
-                        <h2 class="mb-4 col-12 text-center project-title">Doritos Displays and Products</h2>
-                        <p class="col-12 text-center mt-0 mb-3">
-                            Concepted and designed in-store displays, packaging, and merchandise for the Doritos brand.
+                        <h2 class="mb-3 col-12 text-center project-title">Doritos Displays and Products</h2>
+                        <p class="col-12 text-center mt-0 mb-0">
+                            Concepted and designed in-store displays for the Doritos brand. The requirements for this
+                            display design were for it to be based on the idea of a vending machine and be something
+                            that’s
+                            revolutionary or never-been-done-before.
                         </p>
-                        <div class="col-12 mb-3 d-flex justify-content-center">
-                            <div class="col-12 col-md-10 d-flex flex-column">
-                                <img class="col-12 mx-2" src="/images/project-images/visualdesign/dor-display.png">
-                            </div>
+                        <div class="col-12 col-md-10 no-gutters">
+                            <img class="col-12" src="/images/project-images/visualdesign/dor-display.png">
                         </div>
+                        <p class="col-12 text-center mt-5 mb-3">
+                            Concepted and designed various new packaging, products, and merchandise for the Doritos
+                            brand.
+                        </p>
                         <div class="col-12 px-0 d-flex justify-content-center">
                             <img class="col-4" src="/images/project-images/visualdesign/dor-product1.png">
                             <img class="col-4 mx-3" src="/images/project-images/visualdesign/dor-product2.png">
@@ -166,8 +175,8 @@
                         </div>
                     </div>
                     <div class="row py-5 px-5 mb-3 d-flex justify-content-center visual-design-image-container">
-                        <h2 class="mb-4 col-12 text-center project-title">Billion Dollar Bracket Promotion</h2>
-                        <p class="col-12 text-center mt-0 mb-5">
+                        <h2 class="mb-3 col-12 text-center project-title">Billion Dollar Bracket Promotion</h2>
+                        <p class="col-12 text-center mt-0 mb-4">
                             Concepted and designed promotion logo and in-store display for a partnership between
                             Unilever and the NCAA.
                         </p>
@@ -179,20 +188,21 @@
                         </div>
                     </div>
                     <div class="row py-5 px-5 mb-3 d-flex justify-content-center visual-design-image-container">
-                        <h2 class="mb-4 col-12 text-center project-title">Lay's In-Store Displays</h2>
-                        <p class="col-12 text-center mt-0 mb-0">
-                            Concepted and designed themed in-store product displays for the Lay's brand.
+                        <h2 class="mb-3 col-12 text-center project-title">Lay’s In-Store Displays</h2>
+                        <p class="col-12 text-center mt-0 mb-4">
+                            Concepted and designed themed in-store product displays for the Lay’s brand. These concepts
+                            were inspired by a corner market or convenience store and a festival or concert.
                         </p>
-                        <div class="col-12 col-md-6 no-gutters d-flex flex-column">
-                            <img src="/images/project-images/visualdesign/lays-display1.png">
+                        <div class="col-12 col-md-6 d-flex flex-column">
+                            <img class="image-shadow" src="/images/project-images/visualdesign/lays-display2.png">
                         </div>
-                        <div class="col-12 col-md-6 no-gutters d-flex flex-column">
-                            <img src="/images/project-images/visualdesign/lays-display2.png">
+                        <div class="col-12 col-md-6 d-flex flex-column">
+                            <img class="image-shadow" src="/images/project-images/visualdesign/lays-display1.png">
                         </div>
                     </div>
                     <div class="row py-5 mb-3 d-flex justify-content-center visual-design-image-container">
-                        <h2 class="mb-4 col-12 text-center project-title">Agile Release Train Logo</h2>
-                        <p class="col-12 text-center mt-0 mb-5">
+                        <h2 class="mb-3 col-12 text-center project-title">Agile Release Train Logo</h2>
+                        <p class="col-12 text-center mt-0 mb-4">
                             Design a logo for a development team with the requirement of incorporating a train and a
                             mullet.
                             Yes, a mullet. Glorious.
